Fix spacing of card icons

--- a/styles.css
+++ b/styles.css
@@ -255,5 +255,6 @@ li{
   height: 100%; 
   display: flex;
   justify-content: flex-end; 
-  align-items: flex-end;
+  align-items: flex-end; 
+  gap: 1em;
 }
